--- a/page_begin.html
+++ b/page_begin.html
@@ -48,8 +48,8 @@
 
 <!-- footer -->
 <template id="blogure-footer">
-    <small>Built with <a href="https://www.cnblogs.com/mossxzzom/p/cnblogs-theme-blogure.html">Blogure</a> • <a
-            href="https://github.com/mossxzzom/cnblogs-theme-blogure">Source</a></small>
+    <small>Built with <a href="https://www.cnblogs.com/">cnblogs</a> •
+        <a href="https://github.com/mossxzzom/cnblogs-theme-blogure">source</a></small>
 </template>
 <script>
     function Footer() {
