--- a/page_end.html
+++ b/page_end.html
@@ -134,7 +134,9 @@
                 main.post.async.tags = true
             }
         })(vm.main))
-        if (!isLogined) return
+        // comments(async)
+        main.post.logined = isLogined
+        if (!main.post.logined) return main
         main.post.async.comments = false
         main.post.async.commentsPromise = Get(getAjaxBaseUrl() + `GetComments.aspx?postId=${cb_entryId}&pageIndex=0`)
         main.post.comments = []
@@ -153,10 +155,11 @@
                     comment.user = { desc: userdom.innerText.trim(), url: userdom.href.trim() }
                     comment.content = commentdom.querySelectorAll('.feedbackCon div')[0].innerHTML.trim()
                     const spandoms = commentdom.querySelectorAll('.feedbackCon span')
-                    const avatardom = adoms[adoms.length - 1]
+                    const avatardom = spandoms[spandoms.length - 1]
                     comment.user.avatar = avatardom.innerText.trim()
                     main.post.comments.push(comment)
                 }
+                main.post.async.comments = true
             }
         })(vm.main))
         console.log(main)
