fix: 支持评论功能 #16

--- a/page_end.html
+++ b/page_end.html
@@ -224,7 +224,7 @@
 
     function MainPosts(postlistdoms, descsdoms) {
         // def
-        const main = (vm.main = { post: {} })
+        const main = (vm.main = {})
         main.layout = 'posts'
         main.posts = []
         // tags, content(async): optimization cycle complex
