--- a/page_end.html
+++ b/page_end.html
@@ -3,6 +3,8 @@
 <script id="mention" src="https://mention.cnblogs.com/bundles/mention.min.js" defer></script>
 
 <script>
+    [markdown_highlight, markdown_highlight_swap] = [markdown_highlight_swap, markdown_highlight]
+
     // @returm promise 
     function Get(url) {
         const xhr = new XMLHttpRequest()
